--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
   <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-stars@3/tsparticles.preset.stars.bundle.min.js"></script>
 </head>
 
 <body>
