--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Vite Photo App</title>
+  <title>Bills App</title>
   <meta name="description" content="My Awesome App description">
   <meta name="theme-color" content="#000000">
   <link rel="icon" href="/favicon.ico">
